# Hiyori-Front

./: Cargo.toml  Dockerfile  docker-compose.yml  next.config.js  package.json
.github/: docker-publish.yml
.github/workflows/: docker-publish.yml
commons/: fecther.ts  types.ts
components/AddMenu/: AddMenu.module.scss  index.tsx
components/AddMenu/AddBook/: AddBook.module.scss  index.tsx
components/AddMenu/NewCollection/: NewCollection.module.scss  index.tsx
components/BookView/: BookView.module.scss  index.tsx
components/CollectionCard/: CollectionCard.module.scss  index.tsx
migrations/: 20230304065003_initial.sql
pages/: _app.tsx  index.tsx
pages/collections/: [id].tsx
src/: main.rs
src/database/: collections.rs  images.rs  mod.rs
src/routes/: collections.rs  images.rs  importer.rs  mod.rs
styles/: Collection.module.scss  Home.module.scss  globals.scss
